# Blossom

./: .env  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  README.md  blossom.db  index.html  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.py  tailwind.config.js  tmp_shell_autogen.json  tmp_shell_cmds.rs  tmp_shell_config.rs  tmp_shell_lib.rs  tmp_shell_perm.json  tmp_shell_perm_schema.json  tmp_shell_readme.md  tmp_shell_schema_dir.json  tmp_shell_scope.rs  tmp_shell_scope_entry.rs  tmp_shell_src.json  vitest.config.ts  vitest.setup.ts
.github/workflows/: ci.yml
DND_Lore_Knowledge/: .gitkeep
Knowledge/Index/: enhanced-rhythm-generation.md  index.sqlite
api/: main.py
dnd/: index.test.ts
dnd/npcs/: index.json  mara-ravensong.md
dnd/rules/: ability-checks.md  advantage-disadvantage.md  critical-hits.md  index.json  saving-throws.md
dnd/schemas/: item.schema.json  lore.schema.json  npc.schema.json  tag.schema.json
docs/: audio-presets.md  dependency-notes.md
public/: higgs_voices.json
scripts/: a11y.ts  enrich_items.ts  export_npc_pdf.ts  gen-schemas.ts  migrate.ts  npc-gen.ts  refresh-bark-presets.ts  reindex.ts  seed_tags.ts  sfz-flac-to-wav.ts  validate-dnd.ts  verify-sfz-samples.ts
src/: App.test.tsx  App.tsx  SongForm.tsx  main.tsx  muiTheme.ts  styles.css  theme.ts  theme.tsx  version.ts
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/python/: ambience_generator.py  bark_tts.py  basic_sfz_generator.py  diarize.py  dj_mix.py  effects.py  higgs_tts.py  kill_tracker.py  lofi_gpu.py  lofi_gpu_hq.py  lofi_gpu_stream.py  musicgen_engine.py  musicgen_engine_lib.py  pdf_tools.py  photogenic.py  presets.json  summarize_session.py  transcribe.py
src-tauri/python/data/: instruments.json
src-tauri/python/lofi/: __init__.py  dsp.py  io_utils.py  renderer.py
src-tauri/python/tests/: test_basic_sfz_generator.py  test_determinism.py  test_diarize.py  test_dj_mix.py  test_forms.py  test_french_horn_timbre.py  test_higgs_tts.py  test_instruments.py  test_kill_tracker.py  test_musicgen_engine_lib.py  test_pdf_tools.py  test_photogenic.py  test_seeded_rng.py  test_sfz_instrument.py  test_summarize_session.py  test_transcribe.py  test_validation_offline.py
src-tauri/src/: commands.rs  lib.rs  main.rs  python_helpers.rs  stocks.rs  task_queue.rs  video_tools.rs
src-tauri/tests/: bark_tts_errors.rs  comfy_start_stop.rs  comfy_status.rs  generate_ambience.rs  higgs_tts_errors.rs  higgs_tts_success.rs  npc_event_chat.rs  npc_log.rs  save_paths.rs  sfz_asset.rs  sfz_convert_flac_to_wav.rs  summarize_session_errors.rs  twelvedata_provider.rs
ui/: onnx.html
(+287 files in other folders)
