[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "blossom"
version = "0.1.0"
description = "Blossom project"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pdfplumber>=0.10.3",
    "pdfminer.six>=20221105",
    "SQLAlchemy>=2.0",
    "PySide6>=6.5",
    "ollama>=0.1.0",
]
